# workout-tracker-backend

./: .env.example  .gitignore  CLAUDE.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
app/: __init__.py  config.py  main.py
app/api/: exercises.py
app/db/: session.py
app/models/: __init__.py  exercise.py
app/schemas/: __init__.py  exercise.py
