[project]
name = "pythonproject"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "alembic>=1.16.5,<1.17",
    "asyncpg>=0.31.0,<0.32",
    "fastapi[standard]>=0.128.0",
    "pydantic-settings>=2.11.0,<2.12",
    # Pin below 0.19.5: fastapi-cloud-cli 0.12.0's FastAPIStyle._get_tag_segments
    # override is incompatible with the animation_status arg added in rich-toolkit 0.19.5+,
    # which crashes `fastapi deploy`.
    "rich-toolkit==0.19.4",
    "sqlalchemy[asyncio]>=2.0.45,<2.1",
]
